# dtse-test-task

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Caddyfile  Dockerfile  LICENSE  docker-compose.yml  entrypoint.sh  pyproject.toml
house_prices/: db.sqlite3  manage.py
house_prices/house_prices/: asgi.py  db.sqlite3  settings.py  urls.py  wsgi.py
house_prices/house_prices/settings/: base.py  prod.py
house_prices/predictor/: model_wrapper.py
house_prices/predictor/api/: docs.py  serializers.py  urls.py  views.py
house_prices/predictor/api/tests/: test_serializers.py  test_views.py
house_prices/predictor/model/: tests.py  wrapper.py
house_prices/users/: models.py
house_prices/users/api/: docs.py  serializers.py  urls.py  views.py
house_prices/users/migrations/: 0001_initial.py
model/: features.json
