[project]
name = "dtse-test-task"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-rest-knox>=5.0.2",
    "djangorestframework>=3.16.0",
    "joblib>=1.5.1",
    "pandas>=2.3.1",
    "python-decouple>=3.8",
    "scikit-learn>=1.7.0",
]
